text align fix

--- a/town_hall/styles/c05x_sorkin.css
+++ b/town_hall/styles/c05x_sorkin.css
@@ -3,11 +3,12 @@ html {
 }
 body {
     width: 650px;
-    vertical-align: center;
 	font-family: Arial, Helvetica, sans-serif;
     font-size: 100%;
     border: double blue;
+    text-align: center;
 }
 main {
-    
+    padding: 0;
+
 }
